--- a/styles.css
+++ b/styles.css
@@ -156,3 +156,13 @@ body{
     scale: 0;
     opacity: 0;
 }
+.fadeIn{
+    animation: 0.5s fadeIn forwards;
+    animation-delay: 0.5s;
+}
+@keyframes fadeIn{
+    to{
+        scale: 1;
+        opacity: 1;
+    }
+}
